add aspire and pay function

--- a/ESCenter.Client/Views/TutorProfile/_AllCourseRequests.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/_AllCourseRequests.cshtml
@@ -33,8 +33,8 @@
 
                     <td>
                         <button type="button" class="btn btn-primary"
-                                onclick="OpenGetDialog('@Url.Action("TeachingClassDetail", "TutorProfile", new { courseId = requestGettingClassDto.CourseId })','Detail');">
-                            Detail
+                                onclick="OpenGetDialog('@Url.Action("MakePayment", "TutorProfile", new { courseId = requestGettingClassDto.CourseId })','Detail');">
+                            Make payment
                         </button>
                     </td>
                 </tr>
