--- a/ESCenter.Client/Views/TutorProfile/Index.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/Index.cshtml
@@ -46,6 +46,10 @@
                         </li>
 
                         <li class="nav-item">
+                            <button class="nav-link" data-bs-toggle="tab" data-bs-target="#payments">Payments</button>
+                        </li>
+
+                        <li class="nav-item">
                             <button class="nav-link" data-bs-toggle="tab" data-bs-target="#verification">Verifications</button>
                         </li>
                     </ul>
@@ -56,6 +60,10 @@
 
                         <div class="tab-pane fade pt-3" id="teaching-class">
                             <partial name="_AllCourseRequests" model="@Model.TutorForProfileDto.BasicCourseRequests"/>
+                        </div>
+
+                        <div class="tab-pane fade pt-3" id="payments">
+                            <partial name="_AllPayments" model="@Model.PaymentDtos"/>
                         </div>
 
                         <div class="tab-pane fade pt-3" id="verification">
