--- a/ESCenter.Client/Views/Course/Detail.cshtml
+++ b/ESCenter.Client/Views/Course/Detail.cshtml
@@ -68,7 +68,7 @@
                     <div class="col-lg-4 ">
 
                         <div class="course-info d-flex justify-content-between align-items-center">
-                            <h5>Class' Fee</h5>
+                            <h5>Section Fee</h5>
                             <p>$@Model.CourseDetailDto.SectionFee</p>
                         </div>
                         <div class="course-info d-flex justify-content-between align-items-center">
