--- a/ESCenter.Client/Views/Tutor/_Pagination.cshtml
+++ b/ESCenter.Client/Views/Tutor/_Pagination.cshtml
@@ -1,30 +1,34 @@
-﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using ESCenter.Client.Application.Contracts.Users.Params
+@using ESCenter.Domain.Shared.Courses
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model Matt.Paginated.PaginatedList<ESCenter.Client.Application.Contracts.Users.Tutors.TutorListForClientPageDto>
 
 @{
+    var tutorParams = ViewData["TutorParams"] as TutorParams ?? new TutorParams();
+    
     var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
     var nextDisabled = !Model.HasNextPage ? "disabled" : "";
     var subject = ViewBag.SubjectSearch as string ?? "";
 
-    var addressSearch = ViewBag.AddressSearch as string;
-    var birthYearSearch = ViewBag.BirthYearSearch;
-    var genderSearch = ViewBag.GenderSearch;
-    var academicLevelSearch = ViewBag.AcademicLevelSearch;
-
+    var currentGender = tutorParams.Gender == Gender.None.ToString() ? null : tutorParams.Gender;
+    var currentAcademicLevel = tutorParams.Academic == AcademicLevel.Optional.ToString() ? null : tutorParams.Academic;
+    var currentAddress = tutorParams.Address;
+    var currentBirthYear = tutorParams.BirthYear == 0 ? null : tutorParams.BirthYear;
 }
 
 <div class="d-flex w-100 justify-content-center gap-3 mt-3">
-    @*first page*@
     @if ((Model.PageIndex - 1) > 1)
     {
-        <a asp-controller="Tutor" asp-route-subjectName="@subject" asp-action="Index" asp-route-pageIndex="1" asp-route-address=@addressSearch asp-route-gender=@genderSearch
-           asp-route-academicLevel=@academicLevelSearch asp-route-birthYear=@birthYearSearch class="btn btn-default">
-            &lt;&lt;
+        <a asp-controller="Tutor" asp-route-subjectName="@subject" asp-action="Index"
+           asp-route-pageIndex="1" asp-route-address=@currentAddress asp-route-gender=@currentGender
+           asp-route-academicLevel=@currentAcademicLevel asp-route-birthYear=@currentBirthYear class="btn btn-default">
+            &#60;&#60;
         </a>
     }
 
-    <a asp-controller="Tutor" asp-action="Index" asp-route-pageIndex="@(Model.PageIndex - 1)" asp-route-address=@addressSearch asp-route-gender=@genderSearch
-       asp-route-academicLevel=@academicLevelSearch asp-route-birthYear=@birthYearSearch asp-route-subjectName=@subject
+    <a asp-controller="Tutor" asp-action="Index" asp-route-pageIndex="@(Model.PageIndex - 1)"
+       asp-route-address=@currentAddress asp-route-gender=@currentGender
+       asp-route-academicLevel=@currentAcademicLevel asp-route-birthYear=@currentBirthYear asp-route-subjectName=@subject
        class="btn btn-default @prevDisabled">
         Previous
     </a>
@@ -33,8 +37,8 @@
     @if ((Model.PageIndex - 1) > 0)
     {
         <a asp-controller="Tutor" asp-action="Index" asp-route-pageIndex=@(Model.PageIndex - 1)
-           asp-route-address=@addressSearch asp-route-gender=@genderSearch
-           asp-route-academicLevel=@academicLevelSearch asp-route-birthYear=@birthYearSearch
+           asp-route-address=@currentAddress asp-route-gender=@currentGender
+           asp-route-academicLevel=@currentAcademicLevel asp-route-birthYear=@currentBirthYear
            asp-route-subjectName="@subject" class="btn btn-default @prevDisabled">
             @(Model.PageIndex - 1)
         </a>
@@ -47,16 +51,16 @@
     @if (Model.PageIndex + 1 <= Model.TotalPages)
     {
         <a asp-controller="Tutor" asp-action="Index" asp-route-pageIndex=@(Model.PageIndex + 1)
-           asp-route-address=@addressSearch asp-route-gender=@genderSearch
-           asp-route-academicLevel=@academicLevelSearch asp-route-birthYear=@birthYearSearch
+           asp-route-address=@currentAddress asp-route-gender=@currentGender
+           asp-route-academicLevel=@currentAcademicLevel asp-route-birthYear=@currentBirthYear
            asp-route-subjectName="@subject" class="btn btn-default @nextDisabled">
             @(Model.PageIndex + 1)
         </a>
     }
 
     <a asp-controller="Tutor" asp-action="Index" asp-route-pageIndex=@(Model.PageIndex + 1)
-       asp-route-address=@addressSearch asp-route-gender=@genderSearch
-       asp-route-academicLevel=@academicLevelSearch asp-route-birthYear=@birthYearSearch
+       asp-route-address=@currentAddress asp-route-gender=@currentGender
+       asp-route-academicLevel=@currentAcademicLevel asp-route-birthYear=@currentBirthYear
        asp-route-subjectName="@subject" class="btn btn-default @nextDisabled">
         Next
     </a>
@@ -65,8 +69,8 @@
     @if (Model.TotalPages - (Model.PageIndex + 1) >= 1)
     {
         <a asp-controller="Tutor" asp-action="Index" asp-route-pageIndex=@Model.TotalPages
-           asp-route-address=@addressSearch asp-route-gender=@genderSearch
-           asp-route-academicLevel=@academicLevelSearch asp-route-birthYear=@birthYearSearch
+           asp-route-address=@currentAddress asp-route-gender=@currentGender
+           asp-route-academicLevel=@currentAcademicLevel asp-route-birthYear=@currentBirthYear
            asp-route-subjectName="@subject" class="btn btn-default">
             &gt;&gt;
         </a>
