add new endpoint getting courses / tutors by ids

--- a/ESCenter.Administrator/Views/Tutor/Index.cshtml
+++ b/ESCenter.Administrator/Views/Tutor/Index.cshtml
@@ -3,13 +3,9 @@
     int i = 0;
 }
 <div class="pagetitle">
-    <h1>User Management</h1>
-    <nav>
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item active">Tutors</li>
-        </ol>
-    </nav>
+    <h1>Tutor Management</h1>
 </div><!-- End Page Title -->
+
 <div class="card">
     <div class="card-body">
         <div class="card-title">
