--- a/ESCenter.Administrator/Views/User/Student.cshtml
+++ b/ESCenter.Administrator/Views/User/Student.cshtml
@@ -3,12 +3,7 @@
     int i = 0;
 }
 <div class="pagetitle">
-    <h1>User Management</h1>
-    <nav>
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item active">Learner</li>
-        </ol>
-    </nav>
+    <h1>Learners</h1>
 </div><!-- End Page Title -->
 
 <a type="button" class="btn btn-success rounded-pill" asp-action="Create" asp-controller="User">Create</a>
