--- a/ESCenter.Administrator/Views/Course/Edit.cshtml
+++ b/ESCenter.Administrator/Views/Course/Edit.cshtml
@@ -1,8 +1,11 @@
 ﻿@using ESCenter.Admin.Application.Contracts.Courses.Dtos
 @using ESCenter.Admin.Application.Contracts.Users.BasicUsers
 @using ESCenter.Domain.Shared
+@using ESCenter.Domain.Shared.Courses
+@using Matt.SharedKernel.Application.Contracts.Interfaces.Infrastructures
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @model ESCenter.Admin.Application.Contracts.Courses.Dtos.CourseForDetailDto
+@inject ICurrentUserService currentUserService
 
 @{
     ViewData["Title"] = "Edit";
@@ -12,14 +15,10 @@
     List<string> statuses = EnumProvider.StatusWithoutConfirmed;
     var subjects = (List<SubjectDto>)(ViewData["Subjects"] ?? "");
     var tutors = (List<UserForListDto>)(ViewData["Tutors"] ?? "");
+
+    var isSuperAdmin = currentUserService.Roles.Contains(Role.SuperAdmin.ToString());
 }
 <h1>Edit</h1>
-
-<div class="alert alert-success alert-dismissible fade collapse" role="alert" id="successAlert">
-    <i class="bi bi-check-circle me-1"></i>
-    Update successfully!
-    <button type="button" class="btn-close" data-bs-toggle="collapse" id="successAlertButton" data-bs-target="#successAlert" aria-expanded="false" aria-controls="successAlert" aria-label="Close"></button>
-</div>
 
 <hr/>
 <div class="card">
@@ -207,16 +206,20 @@
 
             <!-- ----------------------------------- hidden info -->
             <input type="hidden" asp-for="Id"/>
-            <div class="text-center">
-                <button type="submit" class="btn btn-primary">Submit Changes</button>
-                <a asp-action="ConfirmCourse" class="btn btn-primary">Close Course</a>
-                <a type="reset" asp-action="Index" class="btn btn-secondary">Cancel</a>
-            </div>
+            @if (Model.Status != Status.Confirmed.ToString() || isSuperAdmin)
+            {
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary">Submit Changes</button>
+                    <a asp-action="ConfirmCourse" class="btn btn-primary">Close Course</a>
+                    <a type="reset" asp-action="Index" class="btn btn-secondary">Cancel</a>
+                </div>
+            }
             @Html.AntiForgeryToken()
         </form>
         <!-- End Multi Columns Form -->
     </div>
 </div>
+
 
 <div class="card">
     <div class="card-body">
@@ -234,72 +237,79 @@
                 <label class="form-label">Action</label>
 
                 <div class="row">
-                    <button type="button" class="col-4 btn btn-primary" onclick="OpenGetDialog('@Url.Action("PickTutor", "Course", new {subjectId = Model.SubjectId})','Pick tutor')">
-                        Pick Tutor
-                    </button>
-
                     <button type="button" class="col-4 btn btn-outline-secondary"
                             onclick="OpenGetDialog('@Url.Action("ViewTutor", "Course", new { id = @Model.TutorId })','Tutor information')">
                         View Tutor
                     </button>
-                    <button type="button" class="col-4  btn btn-outline-secondary"
-                            onclick="RemoveTutor()">
-                        Remove
-                    </button>
+                    @if (Model.Status != Status.Confirmed.ToString() || isSuperAdmin)
+                    {
+                        <button type="button" class="col-4  btn btn-outline-secondary"
+                                onclick="RemoveTutor()">
+                            Remove
+                        </button>
+                    }
                 </div>
             </div>
-
-            <div class="text-center">
-                <button type="submit" class="btn btn-primary">Submit</button>
-                <a type="reset" asp-action="Index" class="btn btn-secondary">Cancel</a>
-            </div>
-        </form>
-        
-        <!-- Table with stripped rows -->
-        <table id="example" class="table datatable">
-            <thead>
-            <tr>
-                <!-- an avatar column will be added -->
-                <th scope="col">Status</th>
-                <th scope="col">Tutor Name</th>
-                <th scope="col">Phone Number</th>
-                <th scope="col">Email</th>
-                <th data-sortable="false" scope="col" style="width:30%;">Actions</th>
-            </tr>
-            </thead>
-
-            <tbody>
-            @foreach (var requestGettingClassMinimalDto in Model.CourseRequestListForAdminDtos)
+            @if (Model.Status != Status.Confirmed.ToString() || isSuperAdmin)
             {
-                <tr>
-                    <input hidden name="Id" value="@requestGettingClassMinimalDto.Id"/>
-                    <td>@requestGettingClassMinimalDto.RequestStatus</td>
-                    <td>
-                        <a asp-controller="Tutor" asp-action="Detail"
-                           asp-route-id="@requestGettingClassMinimalDto.TutorId">
-                            @requestGettingClassMinimalDto.TutorName
-                        </a>
-                    </td>
-                    <td>@requestGettingClassMinimalDto.TutorPhone</td>
-                    <td>@requestGettingClassMinimalDto.TutorEmail</td>
-
-                    <td>
-                        <button type="button" class="btn btn-primary"
-                                onclick="ApproveTutor('@requestGettingClassMinimalDto.TutorId','@requestGettingClassMinimalDto.TutorName', '@requestGettingClassMinimalDto.TutorPhone');">
-                            Accept
-                        </button>
-
-                        <button type="button" class="btn btn-danger"
-                                onclick="OpenGetDialog('@Url.Action("OpenCancelRequestDialog", "Course", new { courseId = Model.Id, requestId = requestGettingClassMinimalDto.Id })','CancelRequest') ">
-                            Cancel
-                        </button>
-                    </td>
-                </tr>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <a type="reset" asp-action="Index" class="btn btn-secondary">Cancel</a>
+                </div>
             }
-            </tbody>
-        </table>
-        
-        <partial name="_PickTutor" model="@tutors"/>
+        </form>
+
+        <!-- Table with stripped rows -->
+        @if (Model.Status != Status.Confirmed.ToString() || isSuperAdmin)
+        {
+            <table id="example" class="table datatable">
+                <thead>
+                <tr>
+                    <!-- an avatar column will be added -->
+                    <th scope="col">Status</th>
+                    <th scope="col">Tutor Name</th>
+                    <th scope="col">Phone Number</th>
+                    <th scope="col">Email</th>
+                    <th data-sortable="false" scope="col" style="width:30%;">Actions</th>
+                </tr>
+                </thead>
+
+                <tbody>
+                @foreach (var requestGettingClassMinimalDto in Model.CourseRequestListForAdminDtos)
+                {
+                    <tr>
+                        <input hidden name="Id" value="@requestGettingClassMinimalDto.Id"/>
+                        <td>@requestGettingClassMinimalDto.RequestStatus</td>
+                        <td>
+                            <a asp-controller="Tutor" asp-action="Detail"
+                               asp-route-id="@requestGettingClassMinimalDto.TutorId">
+                                @requestGettingClassMinimalDto.TutorName
+                            </a>
+                        </td>
+                        <td>@requestGettingClassMinimalDto.TutorPhone</td>
+                        <td>@requestGettingClassMinimalDto.TutorEmail</td>
+
+                        @if (Model.Status != Status.Confirmed.ToString() || isSuperAdmin)
+                        {
+                            <td>
+                                <button type="button" class="btn btn-primary"
+                                        onclick="ApproveTutor('@requestGettingClassMinimalDto.TutorId','@requestGettingClassMinimalDto.TutorName', '@requestGettingClassMinimalDto.TutorPhone');">
+                                    Accept
+                                </button>
+
+                                <button type="button" class="btn btn-danger"
+                                        onclick="OpenGetDialog('@Url.Action("OpenCancelRequestDialog", "Course", new { courseId = Model.Id, requestId = requestGettingClassMinimalDto.Id })','CancelRequest') ">
+                                    Cancel
+                                </button>
+                            </td>
+                        }
+                    </tr>
+                }
+                </tbody>
+            </table>
+            <partial name="_PickTutor" model="@tutors"/>
+        }
+
         <!-- End Table with stripped rows -->
     </div>
 </div>
