--- a/ESCenter.Administrator/Views/Home/Index.cshtml
+++ b/ESCenter.Administrator/Views/Home/Index.cshtml
@@ -430,64 +430,22 @@
             <h5 class="card-title">Recent Activity <span>| Today</span></h5>
 
             <div class="activity">
-                @foreach (var noti in Model.NotificationDtos)
+                @foreach (var notification in Model.NotificationDtos)
                 {
                     <div class="activity-item d-flex">
-                        <div class="activite-label">@DateTime.Now.Subtract(noti.CreationTime).Minutes</div>
+                        <div class="activite-label">@notification.TimeAgo</div>
                         <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>
                         <div class="activity-content">
 
-                            @noti.Message
-                            <a href="@noti.DetailPath" class="fw-bold text-dark">See detail</a>
+                            @notification.Message
+                            <a href="@notification.DetailPath" class="fw-bold text-dark">See detail</a>
                         </div>
                     </div>
 
                     <!-- End activity item-->
                 }
-
-
-                @* <div class="activity-item d-flex">
-                            <div class="activite-label">56 min</div>
-                            <i class='bi bi-circle-fill activity-badge text-danger align-self-start'></i>
-                            <div class="activity-content">
-                                Voluptatem blanditiis blanditiis eveniet
-                            </div>
-                        </div><!-- End activity item-->
-
-                        <div class="activity-item d-flex">
-                            <div class="activite-label">2 hrs</div>
-                            <i class='bi bi-circle-fill activity-badge text-primary align-self-start'></i>
-                            <div class="activity-content">
-                                Voluptates corrupti molestias voluptatem
-                            </div>
-                        </div><!-- End activity item-->
-
-                        <div class="activity-item d-flex">
-                            <div class="activite-label">1 day</div>
-                            <i class='bi bi-circle-fill activity-badge text-info align-self-start'></i>
-                            <div class="activity-content">
-                                Tempore autem saepe <a href="#" class="fw-bold text-dark">occaecati voluptatem</a> tempore
-                            </div>
-                        </div><!-- End activity item-->
-
-                        <div class="activity-item d-flex">
-                            <div class="activite-label">2 days</div>
-                            <i class='bi bi-circle-fill activity-badge text-warning align-self-start'></i>
-                            <div class="activity-content">
-                                Est sit eum reiciendis exercitationem
-                            </div>
-                        </div><!-- End activity item-->
-
-                        <div class="activity-item d-flex">
-                            <div class="activite-label">4 weeks</div>
-                            <i class='bi bi-circle-fill activity-badge text-muted align-self-start'></i>
-                            <div class="activity-content">
-                                Dicta dolorem harum nulla eius. Ut quidem quidem sit quas
-                            </div>
-                        </div><!-- End activity item-->
-*@
+                
             </div>
-
         </div>
     </div><!-- End Recent Activity -->
 
@@ -495,7 +453,7 @@
     <div class="card" id="areaChartCard">
 
         <div class="card-body">
-            <h5 class="card-title">Incomes for the last 30 days</h5>
+            <h5 class="card-title">Incomes for the last 7 days</h5>
 
             <div id="areaChart"></div>
 
