--- a/ESCenter.Administrator/Views/Shared/_Layout.cshtml
+++ b/ESCenter.Administrator/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
         <li class="nav-item">
             <a class="nav-link collapsed" asp-controller="Home" asp-action="Index">
                 <i class="bi bi-grid"></i>
-                <span>Dashboard</span>
+                <span>Home</span>
             </a>
         </li><!-- End Dashboard Nav -->
 
@@ -106,14 +106,33 @@
         </li><!-- End Tables Nav -->
 
         <li class="nav-item">
-            <a class="nav-link collapsed" asp-controller="TutorRequest" asp-action="Index">
-                <i class="bi bi-layout-text-window-reverse"></i><span>Tutor Requests</span>
+            <a class="nav-link collapsed">
+                <i class="bi bi-card-list"></i><span>Tutor Requests</span>
             </a>
+
+            <ul id="tables-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
+                <li>
+                    <a asp-action="Index" asp-controller="TutorRequest" asp-route-type="@RequestStatus.OnProgress">
+                        <i class="bi bi-circle"></i><span>On Progressing</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-action="Index" asp-controller="TutorRequest" asp-route-type="@RequestStatus.Done">
+                        <i class="bi bi-circle"></i><span>Confirmed</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-action="Index" asp-controller="TutorRequest" asp-route-type="@RequestStatus.Canceled">
+                        <i class="bi bi-circle"></i><span>Canceled</span>
+                    </a>
+                </li>
+            </ul>
+
         </li>
 
         <li class="nav-item">
             <a class="nav-link collapsed" asp-controller="Payment" asp-action="Index">
-                <i class="bi bi-layout-text-window-reverse"></i><span>Payments</span>
+                <i class="bi bi-gem"></i><span>Payments</span>
             </a>
         </li>
 
@@ -130,7 +149,7 @@
                 </li>
                 <li>
                     <a asp-action="Index" asp-controller="Course" asp-route-type="@Status.OnProgressing.ToString()">
-                        <i class="bi bi-circle"></i><span>OnProgressing</span>
+                        <i class="bi bi-circle"></i><span>On Progressing</span>
                     </a>
                 </li>
                 <li>
@@ -229,13 +248,20 @@
     </div>
 </div><!-- End Large Modal-->
 
-<div id="preloader" >
-    <div class="loader" ></div>
+<div id="preloader">
+    <div class="loader"></div>
 </div>
 
-<footer class="border-top footer text-muted">
-    <div class="container">
-        &copy; 2023 - CED.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+<footer id="footer" class="footer">
+    <div class="copyright">
+        © Copyright <strong><span>Edu Center</span></strong>. All Rights Reserved
+    </div>
+    <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
     </div>
 </footer>
 
