--- a/ESCenter.Administrator/Views/Shared/_Layout.cshtml
+++ b/ESCenter.Administrator/Views/Shared/_Layout.cshtml
@@ -112,8 +112,8 @@
 
             <ul id="tables-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
                 <li>
-                    <a asp-action="Index" asp-controller="TutorRequest" asp-route-type="@RequestStatus.OnProgress">
-                        <i class="bi bi-circle"></i><span>On Progressing</span>
+                    <a asp-action="Index" asp-controller="TutorRequest" asp-route-type="@RequestStatus.Pending">
+                        <i class="bi bi-circle"></i><span>Pending</span>
                     </a>
                 </li>
                 <li>
