--- a/ESCenter.Administrator/Views/Staff/Create.cshtml
+++ b/ESCenter.Administrator/Views/Staff/Create.cshtml
@@ -74,7 +74,7 @@
             <div class="col-md-6">
                 <label asp-for="PhoneNumber" class="form-label">Number</label>
                 <div class="col-sm-12">
-                    <input type="number" asp-for="PhoneNumber" class="form-control">
+                    <input type="tel" asp-for="PhoneNumber" class="form-control">
                 </div>
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
 
