--- a/ESCenter.Administrator/Views/Staff/Edit.cshtml
+++ b/ESCenter.Administrator/Views/Staff/Edit.cshtml
@@ -4,11 +4,11 @@
 @{
     ViewData["Title"] = "Edit";
 
-    List<string> roles =
-    [
+    List<string> roles = new List<string>
+    {
         "Admin",
-        "SuperAdmin"
-    ];
+    };
+
     List<string> genders = ViewData["Genders"] as List<string> ?? new List<string>();
 }
 <h1>Edit</h1>
@@ -50,7 +50,7 @@
 
                     @foreach (string i in genders)
                     {
-                        @if (i != Model.Gender.ToString())
+                        @if (i != Model.Gender)
                         {
                             <option> @i </option>
                         }
@@ -110,7 +110,7 @@
             <div class="col-md-6">
                 <label asp-for="PhoneNumber" class="form-label">Number</label>
                 <div class="col-sm-12">
-                    <input type="text" asp-for="PhoneNumber" class="form-control"/>
+                    <input type="text" readonly="" asp-for="PhoneNumber" class="form-control"/>
                 </div>
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
 
@@ -122,7 +122,7 @@
                 <input type="text" class="form-control" asp-for="City" placeholder="Sai Gon"/>
                 <span asp-validation-for="City" class="text-danger"></span>
             </div>
-            
+
             <div class="col-6">
                 <label asp-for="Country" class="form-label">Address</label>
                 <input type="text" class="form-control" asp-for="Country" placeholder="Viet Nam"/>
@@ -141,14 +141,7 @@
 
             <input type="hidden" asp-for="Id"/>
             <div class="text-center">
-                @if (Model.Role == "Admin")
-                {
-                    <button type="submit" disabled="disabled" class="btn btn-primary">Submit</button>
-                }
-                else
-                {
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                }
+                <button type="submit" class="btn btn-primary">Submit</button>
                 <a type="reset" asp-action="Index" class="btn btn-secondary">Cancel</a>
             </div>
         </form><!-- End Multi Columns Form -->
