--- a/ESCenter.Administrator/Views/Course/Edit.cshtml
+++ b/ESCenter.Administrator/Views/Course/Edit.cshtml
@@ -190,10 +190,17 @@
 
             <div class="col-12">
                 <div class="form-floating">
-                    <textarea class="form-control" placeholder="Address" asp-for="Description" style="height: 100px;"></textarea>
+                    <textarea class="form-control" placeholder="Description" asp-for="Description" style="height: 100px;"></textarea>
                     <label asp-for="Description" class="form-label">Description</label>
                     <span asp-validation-for="Description" class="text-danger"></span>
-
+                </div>
+            </div>
+            
+            <div class="col-12">
+                <div class="form-floating">
+                    <textarea class="form-control" placeholder="Note" asp-for="Note" style="height: 100px;"></textarea>
+                    <label asp-for="Note" class="form-label">Note</label>
+                    <span asp-validation-for="Note" class="text-danger"></span>
                 </div>
             </div>
 
@@ -210,8 +217,14 @@
             {
                 <div class="text-center">
                     <button type="submit" class="btn btn-primary">Submit Changes</button>
-                    <a asp-action="ConfirmCourse" class="btn btn-primary">Close Course</a>
-                    <a type="reset" asp-action="Index" class="btn btn-secondary">Cancel</a>
+
+                    @if (Model.Status == Status.UnverifiedPayment.ToString())
+                    {
+                        <a asp-action="ConfirmCourse" class="btn btn-primary">Close Course</a>
+                    }
+
+
+                    <a type="reset" asp-action="Index" class="btn btn-secondary">Back to list</a>
                 </div>
             }
             @Html.AntiForgeryToken()
@@ -220,6 +233,14 @@
     </div>
 </div>
 
+@if (Model.Status == Status.Confirmed.ToString())
+{
+    <div class="card">
+        <div class="card-body">
+            <a asp-action="CancelWithRefund" asp-route-id="@Model.Id" class="btn btn-primary">Cancel with refunding</a>
+        </div>
+    </div>
+}
 
 <div class="card">
     <div class="card-body">
@@ -319,3 +340,4 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
+
