--- a/ESCenter.Administrator/Views/Shared/_Layout.cshtml
+++ b/ESCenter.Administrator/Views/Shared/_Layout.cshtml
@@ -153,6 +153,11 @@
                     </a>
                 </li>
                 <li>
+                    <a asp-action="Index" asp-controller="Course" asp-route-type="@Status.UnverifiedPayment.ToString()">
+                        <i class="bi bi-circle"></i><span>Unverified Payment</span>
+                    </a>
+                </li>
+                <li>
                     <a asp-action="Index" asp-controller="Course" asp-route-type="@Status.Confirmed.ToString()">
                         <i class="bi bi-circle"></i><span>Confirmed</span>
                     </a>
