--- a/ESCenter.Administrator/Views/Tutor/Edit.cshtml
+++ b/ESCenter.Administrator/Views/Tutor/Edit.cshtml
@@ -165,7 +165,7 @@
 
             <div class="col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" asp-for="IsVerified"/>
+                    <input class="form-check-input" type="checkbox" asp-for="IsVerified" name="IsVerified"/>
                     <label class="form-check-label" asp-for="IsVerified">
                         Is tutor verified?
                     </label>
