--- a/ESCenter.Client/Views/Course/Create.cshtml
+++ b/ESCenter.Client/Views/Course/Create.cshtml
@@ -18,7 +18,7 @@
 <h4>@Model.Title</h4>
 
 <hr/>
-<section id="course-details" class="course-details">
+<section id="course-details" class="course-details" style="padding: 0">
     <form asp-action="CreateCourse" asp-controller="Course">
         <div class="container" data-aos="fade-up">
             <div class="row">
