--- a/ESCenter.Client/Views/Tutor/TutorRegistration.cshtml
+++ b/ESCenter.Client/Views/Tutor/TutorRegistration.cshtml
@@ -12,7 +12,7 @@
     <button type="button" class="btn-close" data-bs-toggle="collapse" id="successAlertButton" data-bs-target="#successAlert" aria-expanded="false" aria-controls="successAlert" aria-label="Close"></button>
 </div>
 
-<section id="course-details" class="course-details">
+<section id="course-details" class="course-details" style="padding: 0">
 
     <div class="container" data-aos="fade-up">
         <div class="card">
