--- a/ESCenter.Client/Views/Authentication/ForgotPassword.cshtml
+++ b/ESCenter.Client/Views/Authentication/ForgotPassword.cshtml
@@ -38,7 +38,7 @@
                                 <button class="btn btn-primary w-100" type="submit">Send</button>
                             </div>
                             <div class="col-12">
-                                <p class="small mb-0">If you had an account <a asp-controller="Authentication" asp-action="Login">Sign in</a></p>
+                                <p class="small mb-0">If you had an account <a asp-controller="Authentication" asp-action="Index">Sign in</a></p>
                             </div>
                         </form>
 
