--- a/ESCenter.Client/Views/Course/Detail.cshtml
+++ b/ESCenter.Client/Views/Course/Detail.cshtml
@@ -11,7 +11,7 @@
     </div>
 </div>
 
-<section id="course-details" class="course-details">
+<section id="course-details" class="course-details" style="padding: 0">
     <div class="container" data-aos="fade-up">
 
         <div class="row">
