--- a/ESCenter.Client/Views/Shared/_Layout.cshtml
+++ b/ESCenter.Client/Views/Shared/_Layout.cshtml
@@ -122,7 +122,7 @@
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
                     <li>
-                        <a href="/">Dashboard</a>
+                        <a href="/">Home</a>
                     </li>
                     <li>
                         <a asp-action="About" asp-controller="Home">About</a>
