--- a/ESCenter.Client/Views/TutorProfile/_AllCourseRequests.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/_AllCourseRequests.cshtml
@@ -15,7 +15,6 @@
                 <th scope="col">Title</th>
                 <th scope="col">Subject</th>
                 <th scope="col">Status</th>
-                <th data-sortable="false" scope="col" style="width:30%;">Actions</th>
             </tr>
             </thead>
             <tbody>
@@ -33,8 +32,8 @@
 
                     <td>
                         <button type="button" class="btn btn-primary"
-                                onclick="OpenGetDialog('@Url.Action("MakePayment", "TutorProfile", new { courseId = requestGettingClassDto.CourseId })','Detail');">
-                            Make payment
+                                onclick="OpenGetDialog('@Url.Action("TeachingClassDetail", "TutorProfile", new { courseId = requestGettingClassDto.CourseId })','Detail');">
+                            Detail
                         </button>
                     </td>
                 </tr>
