--- a/ESCenter.Client/Views/Profile/Index.cshtml
+++ b/ESCenter.Client/Views/Profile/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model ESCenter.Client.Models.ProfileViewModel
 
-<section class="profile" style="padding: 180px 0;">
+<section class="profile" style="">
     <div class="row">
         <div class="col-xl-4">
             <div class="card">
@@ -40,13 +40,14 @@
                         <li class="nav-item">
                             <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">Overview</button>
                         </li>
-
                         <li class="nav-item">
                             <button class="nav-link" data-bs-toggle="tab" id="profile-edit-button" data-bs-target="#profile-edit">Edit Profile</button>
                         </li>
-
                         <li class="nav-item">
                             <button class="nav-link" data-bs-toggle="tab" data-bs-target="#learning-class">Learning Class</button>
+                        </li>
+                        <li class="nav-item">
+                            <button class="nav-link" data-bs-toggle="tab" data-bs-target="#notifications">Notifications</button>
                         </li>
                         <li class="nav-item">
                             <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password" id="profile-change-password-button">Change Password</button>
@@ -69,25 +70,15 @@
 
                         <div class="tab-pane fade pt-3" id="learning-class">
                             <!-- Learning Classes -->
-                            <partial name="_allLearningClass" model="@Model.LearningCourseForListDtos"/>
+                            <partial name="_AllLearningClass" model="@Model.LearningCourseForListDtos"/>
                             <!-- End Learning Classes -->
                         </div>
-
-                        @* @if (Model.UserProfileDto.Role == Role.Tutor.ToString()) *@
-                        @* { *@
-                        @*     <div class="tab-pane fade pt-3" id="profile-settings"> *@
-                        @* *@
-                        @*         <partial name="_AllClassRequests" model="@Model.RequestGettingClassDtos" view-data="ViewData"/> *@
-                        @* *@
-                        @* *@
-                        @*     </div> *@
-                        @*     <div class="tab-pane fade pt-3" id="tutor-infor"> *@
-                        @*         <!-- Change Password Form --> *@
-                        @*         <partial name="_ProfileTutorEdit" model="@Model.TutorMinimalBasicDto"/> *@
-                        @*         <!-- End Change Password Form --> *@
-                        @* *@
-                        @*     </div> *@
-                        @* } *@
+                        
+                        <div class="tab-pane fade pt-3" id="notifications">
+                            <!-- Learning Classes -->
+                            <partial name="_AllNotifications" model="@Model.NotificationDtos"/>
+                            <!-- End Learning Classes -->
+                        </div>
 
                         <div class="tab-pane fade pt-3" id="profile-change-password">
                             <!-- Change Password Form -->
