--- a/ESCenter.Client/Views/Shared/_Layout.cshtml
+++ b/ESCenter.Client/Views/Shared/_Layout.cshtml
@@ -73,10 +73,11 @@
                             <i class="bi bi-person"></i>
                             <span>My Profile</span>
                         </a>
+                        
                         @if (User.FindFirst(ClaimTypes.Role)?.Value == Role.Tutor.ToString())
                         {
                             <a class="dropdown-item d-flex align-items-center" asp-action="Index" asp-controller="TutorProfile">
-                                <i class="bi bi-person"></i>
+                                <i class="bi bi-person-lines-fill"></i>
                                 <span>My Tutor Profile</span>
                             </a>
                         }
