--- a/ESCenter.Client/Views/TutorProfile/Index.cshtml
+++ b/ESCenter.Client/Views/TutorProfile/Index.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 
-<section class="profile" style="padding: 180px 0;">
+<section class="profile" style="">
     <div class="row">
         <div class="col-xl-4">
 
